app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import 'highlight.js/styles/tomorrow-night-bright.css';

html {
  @apply bg-contain;
  border: none;
}

body {
  @apply bg-nightsky bg-contain bg-repeat flex flex-col items-center h-screen pt-2.5 leading-tight overflow-auto; 
  font-family: "Lucida Sans","Lucida Sans Regular","Lucida Grande","Lucida Sans Unicode",Geneva,Verdana,sans-serif;
}

[data-theme='computer'] body {
  @apply bg-piggy;
}

[data-theme='robotics'] body {
  @apply bg-pcb;
}

[data-theme='travel'] body {
  background-image: none;
  background-color: rgb(38, 52, 66);
}

[data-theme='other'] body {
  @apply bg-nightsky;
}

[data-theme='food'] body {
  @apply bg-food-bodyBackgroundColor bg-repeat;
  background-image: none;
}

[data-theme='photography'] body {
  @apply bg-nightsky;
}

[data-theme='music'] body {
  @apply bg-nightsky;
}

h2 {
  @apply text-2xl font-bold text-center;
}

nav {
  @apply w-full flex flex-row items-center gap-5 content-center;
}

button {
  @apply bg-[#1a3a56] rounded p-4 text-white;
}

button:hover {
  @apply bg-[#0c1c2a];
}

.blog-header {
  @apply w-[90vw] h-[10vh] bg-[rgba(8,51,82,0.85)] rounded mb-2.5 border-none border-[rgba(201,200,200,0.65)] flex flex-row text-[rgb(212,207,187)] p-5 items-center justify-center;
}

[data-theme='computer'] .blog-header {
  border: 1px solid;
  @media (max-width: 768px) {border: none}
  @apply bg-computer-headerBGColor text-computer-headerTextColor border-computer-headerBorderColor;
}

[data-theme='robotics'] .blog-header {
  @apply bg-robotics-headerBGColor text-robotics-headerTextColor border-robotics-headerBorderColor;
}

[data-theme='travel'] .blog-header {
  @apply bg-travel-headerBGColor text-travel-headerTextColor border-travel-headerBorderColor;
}

[data-theme='other'] .blog-header {
  @apply bg-other-headerBGColor text-other-headerTextColor border-other-headerBorderColor;
}

[data-theme='food'] .blog-header {
  border: 1px solid;
  @media (max-width: 768px) {border: none}
  @apply bg-food-headerBGColor text-food-headerTextColor border-food-headerBorderColor;
}

[data-theme='photography'] .blog-header {
  border: 1px solid;
  @media (max-width: 768px) {border: none}
  @apply bg-photography-headerBGColor text-photography-headerTextColor border-photography-headerBorderColor;
}

[data-theme='music'] .blog-header {
  border: 1px solid;
  @media (max-width: 768px) {border: none}
  @apply bg-music-headerBGColor text-music-headerTextColor border-music-headerBorderColor;
}

.about-link {
  @apply text-base font-bold items-center basis-1/6 text-left;
}

.about-link :hover {
  @apply text-yellow-500;
}

.new-blog-link {
  @apply text-xs items-center basis-1/6 text-center;
}

.button-style a {
  @apply bg-[rgba(159,147,147,0.098)] border-none p-2 py-3 rounded-sm cursor-pointer shadow-[1px_2px_rgba(58,58,46,0.623)];
}

.button-style a:hover {
  @apply bg-[rgba(170,156,36,0.213)];
}

.button-style a:active {
  @apply bg-[rgba(104,95,15,0.405)] shadow-[1px_2px_rgba(37,37,28,0.572)];
}

.page-title {
  @apply text-2xl font-bold basis-2/6 items-center text-center;
}

.mobile-search,
.mobile-menu {
  display: none;
}

.mobile-menu {
  @apply relative;
}

.mobile-menu-icon {
  @apply cursor-pointer;
}

.mobile-menu-overlay {
  @apply fixed top-0 left-0 w-full h-full bg-black bg-opacity-90 flex justify-center pt-16 z-50;
}

.mobile-menu-list {
  @apply flex flex-col items-center w-full text-white;
}

.mobile-menu-item {
  @apply my-4 text-xl w-full text-center cursor-pointer transition-colors duration-300;
}

.mobile-menu-item :hover {
  @apply text-yellow-500;
}

.all-blogs-link {
  @apply text-xs items-center basis-1/6 text-center;
}

.user-link {
  @apply text-base font-bold items-center basis-1/6 text-right;
}

.containero {
  @apply w-[90vw] bg-[rgba(250,234,214,0.85)] border-none border-[rgba(0,0,0,0.35)] flex rounded justify-center;
  min-height: min-content;
}

[data-theme='computer'] .containero {
  border: 1px solid;
  @media (max-width: 768px) {border: none}
  @apply bg-computer-containerBGColor text-computer-containerTextColor border-computer-containerBorderColor;
}

[data-theme='robotics'] .containero {
  @apply bg-robotics-containerBGColor text-robotics-containerTextColor border-robotics-containerBorderColor;
}

[data-theme='travel'] .containero {
  @apply bg-travel-containerBGColor text-travel-containerTextColor border-travel-containerBorderColor;
}

[data-theme='other'] .containero {
  @apply bg-other-containerBGColor text-other-containerTextColor border-other-containerBorderColor;
}

[data-theme='food'] .containero {
  border: 1px solid;
  @media (max-width: 768px) {border: none}
  @apply bg-food-containerBGColor text-food-containerTextColor border-food-containerBorderColor;
}

[data-theme='photography'] .containero {
  border: 1px solid;
  @media (max-width: 768px) {border: none}
  @apply bg-photography-containerBGColor text-photography-containerTextColor border-photography-containerBorderColor;
}

[data-theme='music'] .containero {
  border: 1px solid;
  @media (max-width: 768px) {border: none}
  @apply bg-music-containerBGColor text-music-containerTextColor border-music-containerBorderColor;
}

.about {
  @apply px-40 py-2 flex flex-col items-center gap-5 justify-center;
}

.about a {
  @apply bg-[rgba(251,150,67,0.848)] text-black px-[3px] rounded-[2px];
}

.version {
  @apply pt-2 items-center justify-center;
}

.loadingerror,
.loadingfallback {
  @apply flex flex-col gap-4 items-center justify-center pt-8 text-center;
}

.signinmessage {
  @apply flex w-full text-center items-center justify-center text-gray-500;
}

.signin-wrapper {
  @apply w-full h-full flex items-center justify-center gap-5 p-12 px-72;
}

.signin-item {
  @apply flex-1 flex flex-col items-center gap-5 justify-center;
}

.signin-button {
  cursor: pointer;
}


.signin-item form {
  @apply flex flex-col items-center justify-center gap-5 w-3/4;

}
/* ... */

